# gRPC-microservices-windows

./: .gitignore  README.md
C#/: README.md
C#/MyServer/: MyServer.csproj  Program.cs
C#/MyServer/Properties/: AssemblyInfo.cs
C#/Talk/: Talk.csproj  Talk.sln
C#/Talk/MyClient/: MyClient.csproj  Program.cs
C#/Talk/MyClient/Properties/: AssemblyInfo.cs
C#/Talk/Properties/: AssemblyInfo.cs
C++/TalkingClient/: Client.cpp  TalkingClient.vcxproj  TalkingClient.vcxproj.filters
C++/TalkingServer/: Server.cpp  TalkingServer.sln  TalkingServer.vcxproj  TalkingServer.vcxproj.filters
C++/proto/: Talk.grpc.pb.cc  Talk.grpc.pb.h  Talk.pb.cc  Talk.pb.h  Talk.proto
Go/client/: client.go
Go/server/: server.go
RUST/: Cargo.toml  Talk.proto  build.rs
RUST/src/: Talk.rs  Talk_grpc.rs  lib.rs
docs/: index.html
docs/css/: main.css
