[package]
name = "Talk_microservice"
version = "1.0.0"
authors = ["Pawel Staszkiewicz"]
publish = false

[lib]
doctest = false
test = false

[dependencies.grpc]
path = "C:/Users/pshad/Desktop/Rust_Tut/grpc-rust/grpc"
[dependencies.grpc-protobuf]
path = "C:/Users/pshad/Desktop/Rust_Tut/grpc-rust/grpc-protobuf"

[dependencies]
protobuf        = "2"
futures         = "0.1.*"
futures-cpupool = "0.1.*"
tls-api            = "0.1.*"
tls-api-native-tls = "0.1.*"
httpbis         = { git = "https://github.com/stepancheg/rust-http2" }
env_logger      = "~0.5"

[build-dependencies]
protoc-rust-grpc = { path = "C:/Users/pshad/Desktop/Rust_Tut/grpc-rust/protoc-rust-grpc" }

[[bin]]
name = "Talking_client"
test = false

[[bin]]
name = "Talking_server"
test = false
